2007-09-05  Atsushi Enomoto  <atsushi@ximian.com>

	* EventLog.cs, EventLogImpl.cs, LocalFileEventLog.cs, NullEventLog.cs,
	  Win32EventLog.cs : added missing members, will be left unsupported
	  in non-Win32 impl and left unimplemented in Win32.
	* CounterCreationDataCollection.cs : in 2.0 OnValidate() is overriden
	  instad of OnInsert().
	* Process.cs : removed StandardErrorEncoding and
	  StandardOutputEncoding. They do not exist anymore.

2007-09-03  Atsushi Enomoto  <atsushi@ximian.com>

	* ProcessStartInfo.cs : Implemented Verbs. It is done.

2007-09-03  Atsushi Enomoto  <atsushi@ximian.com>

	* Process.cs, ProcessStartInfo.cs : user info support (on windows).

2007-08-23  Robert Jordan  <robertj@gmx.net>

	* Process.cs: implement PriorityClass. Fixes #81756.

Mon Aug 20 12:41:09 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* Process.cs: implemented icall for system/user times.

2007-08-14  Gert Driesen  <drieseng@users.sourceforge.net>

	* EventLog.cs: Do not allow all whitespace machine name. Do nothing
	when setting the same value for EnableRaisingEvents, and only modify
	value of field when enable/disable succeeded. Treats log name case
	insensitively on all platforms, and perform reset when the log name
	is changed. Validate new machine name in property, and treat it
	case-insensitively. Perform reset when source is modified, and log
	name was not explicitly set. When EventLog is closed, also disable
	event watcher.
	* LocalEventLog.cs: In Close, clean-up the FileSystemWatcher. Add
	locking to Created eventhandler to avoid duplicate notifications.
	* Win32EventLog.cs: Cache handle for reading from eventlog. In Close,
	close the read handle. Implement support for watching win32 eventlog.
	Fixes bug #82436.

2007-08-08  Gonzalo Paniagua Javier <gonzalo.mono@gmail.com>

	* Process.cs: added StandardOutputEncoding and StandardErrorEncoding
	properties. Bug #82262 fixed.

2007-08-06  Atsushi Enomoto  <atsushi@ximian.com>
